--- a/scilab/modules/xpad/locales/en_US/xpad.pot
+++ b/scilab/modules/xpad/locales/en_US/xpad.pot
@@ -14,7 +14,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Revision-Date: 2009-11-09 14:21+0100\n"
+"Revision-Date: 2009-11-09 14:37+0100\n"
 
 # File: src/java/org/scilab/modules/xpad/utils/XpadMessages.java, line: 120
 msgid ""
@@ -68,7 +68,7 @@ msgid "All rights reserved"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/xpad/utils/XpadMessages.java, line: 79
-msgid "Auto Indent"
+msgid "Auto Reformat Selection"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/xpad/utils/XpadMessages.java, line: 99
@@ -207,10 +207,6 @@ msgstr ""
 msgid "Highlight current line"
 msgstr ""
 #
-# File: src/java/org/scilab/modules/xpad/utils/XpadMessages.java, line: 52
-msgid "Indent"
-msgstr ""
-#
 # File: src/java/org/scilab/modules/xpad/utils/XpadMessages.java, line: 110
 msgid "Invalid regular expression : %s"
 msgstr ""
@@ -277,6 +273,10 @@ msgstr ""
 #
 # File: src/java/org/scilab/modules/xpad/utils/XpadMessages.java, line: 42
 msgid "Redo"
+msgstr ""
+#
+# File: src/java/org/scilab/modules/xpad/utils/XpadMessages.java, line: 52
+msgid "Reformat Selection"
 msgstr ""
 #
 # File: src/java/org/scilab/modules/xpad/utils/XpadMessages.java, line: 107
