--- a/scilab/modules/xcos/locales/ca_ES/xcos.po
+++ b/scilab/modules/xcos/locales/ca_ES/xcos.po
@@ -197,7 +197,7 @@ msgstr "Fitxer"
 msgid "Fill Color"
 msgstr ""
 
-msgid "Final inegration time"
+msgid "Final integration time"
 msgstr ""
 
 msgid "Fit diagram to view"
