--- a/scilab/modules/xcos/locales/zh_CN/xcos.po
+++ b/scilab/modules/xcos/locales/zh_CN/xcos.po
@@ -189,7 +189,7 @@ msgstr "文件"
 msgid "Fill Color"
 msgstr ""
 
-msgid "Final inegration time"
+msgid "Final integration time"
 msgstr ""
 
 msgid "Fit diagram to view"
