--- a/scilab/modules/atoms/locales/es_ES/atoms.po
+++ b/scilab/modules/atoms/locales/es_ES/atoms.po
@@ -564,7 +564,7 @@ msgstr ""
 
 #, c-format
 msgid ""
-"%s: Wrong value for input argument #%d: All modules'' version should be "
+"%s: Wrong value for input argument #%d: All modules version should be "
 "set.\n"
 msgstr ""
 
