--- a/scilab/modules/atoms/locales/fr_FR/atoms.po
+++ b/scilab/modules/atoms/locales/fr_FR/atoms.po
@@ -559,7 +559,7 @@ msgstr ""
 
 #, c-format
 msgid ""
-"%s: Wrong value for input argument #%d: All modules'' version should be "
+"%s: Wrong value for input argument #%d: All modules version should be "
 "set.\n"
 msgstr ""
 "%s: Mauvaise valeur pour l''argument d''entrée n° %d: Toutes les versions de "
