--- a/scilab/modules/atoms/locales/it_IT/atoms.po
+++ b/scilab/modules/atoms/locales/it_IT/atoms.po
@@ -563,7 +563,7 @@ msgstr ""
 
 #, c-format
 msgid ""
-"%s: Wrong value for input argument #%d: All modules'' version should be "
+"%s: Wrong value for input argument #%d: All modules version should be "
 "set.\n"
 msgstr ""
 
