--- a/scilab/modules/atoms/locales/ru_RU/atoms.po
+++ b/scilab/modules/atoms/locales/ru_RU/atoms.po
@@ -538,7 +538,7 @@ msgstr ""
 
 #, c-format
 msgid ""
-"%s: Wrong value for input argument #%d: All modules'' version should be "
+"%s: Wrong value for input argument #%d: All modules version should be "
 "set.\n"
 msgstr ""
 "%s: Неверное значение входного параметра №%d: версия всех модулей должна "
